tests/expectations/compiler/dynamic_dispatch/dynamic_call_in_conditional_fail.out
Error [ETYC0372184]: Dynamic calls cannot be used inside a conditional branch.
    --> compiler-test:5:20
     |
   5 |             return _dynamic_call::[u64](target, net, func);
     |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Move the dynamic call outside the `if`/`else` block.
